--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,32 @@
   padding: 0 2rem;
 }
 
+.fadeIn {
+  animation: fadeIn 500ms ease-in forwards;
+}
+
+.fadeOut {
+  animation: fadeOut 500ms ease-in forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
