--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,32 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  position: relative;
+  cursor: pointer;
+}
+
+header a::before {
+  content: "";
+  width: 0;
+  height: 2px;
+  border-radius: 2px;
+  background-color: #00b15c;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  transition: 200ms;
+}
+
+header a:hover::before {
+  width: 100%;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #333;
 }
