--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,13 @@ header a:hover::before {
 body {
   background-color: #333;
 }
+
+.dark {
+  background-color: #333 !important;
+  color: #fff !important;
+}
+
+.light {
+  background-color: #fafafa !important;
+  color: #111 !important;
+}
